Fix ugly page layout on small screens

--- a/src/goupile/client/form.css
+++ b/src/goupile/client/form.css
@@ -84,6 +84,10 @@
 html:not(.mobile) .fm_columns { display: flex; }
 html:not(.mobile) .fm_columns > div + div { padding-left: 12px; }
 html.mobile .fm_columns > div + div { padding-top: 8px; }
+html.mobile .fm_section {
+    margin-left: -12px;
+    margin-right: -12px;
+}
 
 /* -------------------- Widgets -------------------- */
 
